# nlp701-final-project

./: .gitignore  PROJECT_SUMMARY.md  README.md  color.json  compare_reconstruction_result_with_label.py  dataset_loader.py  dataset_utils.py  eval_action_recognition_result.py  eval_mask_reconstruction_result.py  eval_reconstruction_result.py  hyperparameter_config.py  inference_action_recognition.py  inference_mask_reconstruction.py  inference_reconstruction.py  main.ipynb  mask_apply.py  minecraft_dataset.py  model_registry.py  model_wrapper.py  plot_action_recognition_exp.py  plot_frame_reconstruction_exp.py  plot_mask_reconstruction_exp.py  plot_utils.py  pyproject.toml  report_action_recognition_exp.py  report_frame_reconstruction_exp.py  report_mask_reconstruction_exp.py  run_exp.sh  utils_module.py
datasets/minecraft/: README.md  color.json  filter_data.py  preprocess_data.py  read_data.py  show_data.py
notebook/: main-backup.ipynb  main-mid.ipynb
report/: experiment_report.md
scripts/: run_action_recognition_exp.sh  run_frame_reconstruction_exp.sh  run_mask_reconstruction_exp.sh
